--- a/styles/header.css
+++ b/styles/header.css
@@ -1,7 +1,8 @@
 header {
   & #hero {
     background: url(../assets/hero-background.png) no-repeat bottom center/cover;
-    height: 80vh;
+    height: 90vh;
+    animation: bgAppear 3s ease both;
 
     & nav {
       align-items: center;
@@ -13,7 +14,9 @@ header {
       margin-top: 5.18rem;
 
       & p {
+        opacity: 0;
         font-size: var(--fs-body-lg);
+        animation: appear 3s 1s ease forwards;
       }
     }
   }
@@ -62,7 +65,7 @@ header {
 
     & img[src*="mystery"] {
       opacity: 0;
-      animation: imgAppear 3s ease both;
+      animation: appear 3s ease both;
       animation-timeline: view();
 
       &:hover {
@@ -86,7 +89,7 @@ header {
 
   @media (width >= 60em) {
     & #hero {
-      height: 43.75rem;
+      height: 50rem;
 
       & nav {
         padding-top: 2.25rem;
@@ -106,7 +109,16 @@ header {
   }
 }
 
-@keyframes imgAppear {
+@keyframes bgAppear {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes appear {
   0% {
     opacity: 0;
     transform: scale(0.8);
