add book animation to images

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,6 @@
 @import url(global.css);
 @import url(utility.css);
 @import url(header.css);
+@import url(book-kit.css);
 @import url(subscriptions.css);
 @import url(footer.css);
