--- a/styles/book-kit.css
+++ b/styles/book-kit.css
@@ -1,14 +1,13 @@
 #book {
+  & h2 {
+    margin-bottom: 0.5rem;
+  }
   & h2::before,
   h2::after {
     content: "✦";
     width: 1.25rem;
     color: var(--pink-dark);
     padding-inline: 0.75rem;
-  }
-
-  & p {
-    margin-block: 0.5rem 1rem;
   }
 
   & .book-kit {
@@ -18,6 +17,68 @@
     view-timeline-name: --book-timeline;
     view-timeline-axis: block;
 
+    & .text-wrapper {
+      position: relative;
+      top: 2rem;
+      right: 0;
+      left: 0;
+      margin: auto;
+      height: 81%;
+      width: 90%;
+
+      & p {
+        font-size: 0.625rem;
+        position: absolute;
+
+        &.top {
+          top: 0;
+
+          &::after {
+            content: "";
+            width: 4rem;
+            height: 1rem;
+            position: absolute;
+            bottom: -1rem;
+            left: 2rem;
+            background: url(../assets/book-kit/arrow-top-sm.svg) no-repeat;
+          }
+        }
+
+        &.middle {
+          left: 0;
+          top: 40%;
+          animation: slideRightBottom 0.7s both;
+
+          &::after {
+            content: "";
+            width: 35.29px;
+            height: 42.75px;
+            position: absolute;
+            top: 1.5rem;
+            left: 1rem;
+
+            background: url(../assets/book-kit/arrow-middle-sm.svg) no-repeat;
+          }
+        }
+
+        &.bottom {
+          right: 2rem;
+          bottom: 0;
+
+          &::after {
+            content: "";
+            width: 55px;
+            height: 50.99px;
+            position: absolute;
+            bottom: 1.5rem;
+            right: -0.5rem;
+
+            background: url(../assets/book-kit/arrow-bottom-sm.svg) no-repeat;
+          }
+        }
+      }
+    }
+
     & img {
       max-height: 13rem;
       position: absolute;
@@ -26,30 +87,6 @@
       left: 0;
       right: 0;
       margin: auto;
-    }
-
-    & p {
-      display: none;
-      /*
-      position: absolute;
-      left: 50%;
-      right: 50%;
-      top: 50%;
-      bottom: 50%;
-      transform: translate(-50%, -50%); */
-    }
-
-    & p:nth-child(2) {
-      position: absolute;
-
-      &::after {
-        content: "";
-        width: 174px;
-        height: 40px;
-        position: absolute;
-        top: 20px;
-        background: url(../assets/book-kit/arrow-top.svg) no-repeat;
-      }
     }
 
     & img[src*="pin"] {
@@ -91,6 +128,48 @@
   @media (width >= 50em) {
     & .book-kit {
       height: 50rem;
+
+      & .text-wrapper {
+        top: 3rem;
+        height: 91%;
+        width: 75%;
+
+        & p {
+          font-size: 1rem;
+
+          &.top::after {
+            width: 10.875rem;
+            height: 2.5rem;
+            bottom: -3rem;
+            left: 4rem;
+            background: url(../assets/book-kit/arrow-top.svg) no-repeat;
+          }
+
+          &.middle {
+            top: 50%;
+
+            &::after {
+              width: 10.875rem;
+              height: 7.94rem;
+              top: 2rem;
+              left: 1rem;
+              background: url(../assets/book-kit/arrow-middle.svg) no-repeat;
+            }
+          }
+
+          &.bottom {
+            right: 5rem;
+
+            &::after {
+              width: 10rem;
+              height: 9.47rem;
+              bottom: 2rem;
+              right: -3rem;
+              background: url(../assets/book-kit/arrow-bottom.svg) no-repeat;
+            }
+          }
+        }
+      }
 
       &:hover {
         & img[src*="pin"] {
